--- a/src/main/resources/templates/fragments/custom-headfiles.html
+++ b/src/main/resources/templates/fragments/custom-headfiles.html
@@ -14,6 +14,7 @@
 <head th:fragment="perfil-headfiles(title)">
     <meta th:replace="~{/fragments/headfiles(title=${title})}" />
     <link rel="stylesheet" th:href="@{/styles/perfil.css}">
+    <link rel="stylesheet" th:href="@{/styles/fragments/action.css}">
 </head>
 
 <head th:fragment="register-headfiles(title)">
