--- a/src/main/resources/templates/candidatures/list.html
+++ b/src/main/resources/templates/candidatures/list.html
@@ -16,13 +16,13 @@
                 <h1>Canidaturas</h1>
                 <div class="buttons-actions">
 
-                    <!-- <th:block th:replace="~{/canidatures/fragments/filter}"></th:block>-->
+                    <!-- <th:block th:replace="~{/candidatures/fragments/filter}"></th:block>-->
 
                     <div class="father-card">
 
                         <div class="col-md-6 col-lg-6">
-                            <th:block th:each="offer : ${canidatures}"
-                                th:insert="~{/canidatures/fragments/card(offer)}">
+                            <th:block th:each="offer : ${candidatures}"
+                                th:insert="~{/candidatures/fragments/card(offer)}">
                             </th:block>
                         </div>
 
