--- a/src/main/resources/templates/candidatures/fragments/table.html
+++ b/src/main/resources/templates/candidatures/fragments/table.html
@@ -11,8 +11,12 @@
         </tr>
     </thead>
     <tbody th:each="c : ${candidatures}">
+        <!-- th:if="${#authorization.expression('hasRole(''ROLE_STUDENT'')') 
+        and 
+        #authentication.principal.username == c.student.user.username    
+    } " -->
         <tr>
-            <td><a th:text="${c.student.name}" th:href="@{/student/info/{id}(id=${c.student.id})}">Nome do estudante</a>
+            <td><a th:text="${c.student.name}" th:href="@{/student/info/{username}(username=${c.student.user.username})}">Nome do estudante</a>
             </td>
             <td th:text="${c.student.enrollment}">Matrícula do Estudante</td>
             <td th:text="${c.student.user.email}">Email do Estudante</td>
