--- a/src/main/resources/templates/offers/application.html
+++ b/src/main/resources/templates/offers/application.html
@@ -2,9 +2,9 @@
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <meta th:insert="~{/fragments/headfiles(title='Candidatar-se - ${offer.principalActivity}')}">
-    <link rel="stylesheet" th:href="@{/styles/candidature.css}">
-</head>
+    <meta th:insert="~{/fragments/custom-headfiles :: form-headfiles(title='Candidatar-se - ${offer.principalActivity}')}">
+<!--     <link rel="stylesheet" th:href="@{/styles/candidature.css}">
+ --></head>
 
 <body class="application-screen">
 
