--- a/src/main/resources/templates/offers/fragments/table.html
+++ b/src/main/resources/templates/offers/fragments/table.html
@@ -17,7 +17,7 @@
             <td th:text="${offer.id}"></td>
             <td th:text="${offer.principalActivity}"></td>
             <td>
-                <a th:href="@{/company/info/{id}(id=${offer.companyResponsible.id})}" th:text="${offer.companyResponsible.fantasyName}"></a>
+                <a th:href="@{/company/info/{username}(username=${offer.companyResponsible.user.username})}" th:text="${offer.companyResponsible.fantasyName}"></a>
             </td>
             <td th:text="${offer.weeklyWorkload + ' horas'}"></td>
             <td>
