--- a/src/main/resources/templates/offers/application.html
+++ b/src/main/resources/templates/offers/application.html
@@ -18,7 +18,7 @@
             <p th:text="${error}"></p>
         </div>
 
-        <form th:action="@{/internshipOffer/apply}" method="post">
+        <form th:action="@{/candidature/apply}" method="post">
             <input type="hidden" name="offerId" th:value="${offer.id}" />
 
             <div class="form-group">
