--- a/src/main/resources/templates/offers/fragments/card.html
+++ b/src/main/resources/templates/offers/fragments/card.html
@@ -69,7 +69,7 @@
             <i class="bi bi-binoculars-fill"></i> Visualizar
         </a>
 
-        <form th:action="@{apply/{id}(id=${offer.id})}" method="get"
+        <form th:action="@{/candidature/apply/{id}(id=${offer.id})}" method="get"
             th:if="${#authorization.expression('hasRole(''ROLE_STUDENT'')')}"
             th:onsubmit="event.stopPropagation();">
             <button class="button-action btn-apply" type="submit" value="Candidatar-se">
