--- a/src/main/resources/templates/offers/info.html
+++ b/src/main/resources/templates/offers/info.html
@@ -53,8 +53,7 @@
                     </ul>
                 </div>
 
-                <div class="w-50" id="Competence-Desirable-Box">
-
+                <div class="w-50" id="Competence-Desirable-Box" th:unless="${#lists.isEmpty(desirableSkills)}">
                     <p class="topic-title">Competências Desejadas</p>
                     <ul class="list-competences" th:each="competence : ${desirableSkills}">
                         <li class="competence" th:text="${competence.description}">
@@ -68,13 +67,9 @@
             </div>
 
         </div>
-
-        <!-- th:if="${#authentication.principal.username == offer.companyResponsible.user.username 
-                or #authorization.expression('hasRole(''ROLE_COORDINATOR'')')}" --> <!-- Apenas o coordenador e a compania que cadastrou a oferta podem vizualizar as candidaturas de sua vaga. -->
-
-         <div class="info-section candidatures"
-        >
-     
+        <!-- Apenas o coordenador e a compania que cadastrou a oferta podem vizualizar as candidaturas de sua vaga. -->
+        <div class="info-section candidatures" th:if="${#authentication.principal.username == offer.companyResponsible.user.username 
+            or #authorization.expression('hasRole(''ROLE_COORDINATOR'')')}">
             <h1 class="section-title">Candidaturas</h1>
 
             <div th:if="${#lists.isEmpty(offer.candidatureList)}">
@@ -91,10 +86,8 @@
             <h1 class="section-title">Empresa Responsável</h1>
             <p>
                 <strong>Nome da Empresa:</strong>
-                <a 
-                th:href="@{/company/info/{username}(username=${offer.companyResponsible.user.username})}"
-                th:text="${offer.companyResponsible.fantasyName}"
-                >Perfil da empresa</a>
+                <a th:href="@{/company/info/{username}(username=${offer.companyResponsible.user.username})}"
+                    th:text="${offer.companyResponsible.fantasyName}">Perfil da empresa</a>
             </p>
             <p>
                 <strong>Endereço:</strong>
